Replaced deprecated API calls
(cherry picked from commit 9a48d3d5552edae4044a67d5a42d17a8c9114438)